[package]
name = "gwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.2"
once_cell = "1.17.1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "wingdi",
    "libloaderapi",
    "minwindef",
    "windef",
    "dwmapi",
    "uxtheme",
    "gl-gl"
]

[target."cfg(unix)".dependencies.safex]
version = "0.0.5"
features = [
    "xlib"
]