[package]
name = "gwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xlib = []
wayland = []

[dependencies]
raw-window-handle = "0.5.2"
once_cell = "1.17.1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "wingdi",
    "libloaderapi",
    "minwindef",
    "windef",
    "dwmapi",
    "uxtheme",
    "gl-gl"
]

[target."cfg(unix)".dependencies.safex]
version = "0.0.5"
features = [
    "xlib"
]

[target."cfg(unix)".dependencies]
wayland-client = { version = "0.30.0" }
wayland-protocols = { version = "0.30.0", features = ["client"] }
futures-channel = "0.3.16"
futures-util = "0.3"
tempfile = "3.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"